--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1985,7 +1985,7 @@
                     </div><!-- /.reviewsblock__content -->
                   </div><!-- /.reviewsblock__answer -->
                 </div><!-- /.reviewsblock__item -->
-                <div class="reviewsblock__item onlyDesktop">
+                <div class="reviewsblock__item ">
                   <div class="reviewsblock__review">
                     <div class="reviewsblock__header">
                       <div class="reviewsblock__info">
@@ -2044,7 +2044,7 @@
                     </div><!-- /.reviewsblock__content -->
                   </div><!-- /.reviewsblock__answer -->
                 </div><!-- /.reviewsblock__item -->
-                <div class="reviewsblock__item onlyDesktop">
+                <div class="reviewsblock__item ">
                   <div class="reviewsblock__review">
                     <div class="reviewsblock__header">
                       <div class="reviewsblock__info">
