--- a/src/scss/detail.scss
+++ b/src/scss/detail.scss
@@ -467,7 +467,7 @@ color: #3A3A3A;
   color: #25344F; }
 
 .detailinfo__content {
-  max-width: 537px; }
+  max-width: 590px; }
 
 .sitetabs__content {
   display: none; }
@@ -677,6 +677,11 @@ color: #3A3A3A;
     background-repeat: no-repeat;
     background-position: left center;
   }
+  .detailstock__out {
+    background-image: url(../img/outstock.svg);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
 
   .detailinfo__params {
     margin-bottom: 23px;
@@ -833,7 +838,7 @@ color: #3A3A3A;
   .buyblock__quantity {
     padding: 7px 20px 7px 10px;
   }
-  .productcard__addtocart {
+  .detailcard__addtocart {
     min-width: 220px;
     .btn_main_type2 {
       width: 100%;
@@ -929,8 +934,11 @@ margin-bottom: 13px;
 color: #FFFFFF;
 }
 .buyblock__buttons.flex.items-center {
-  margin-right: 20px;
+  width: 100%;
 }
+/* .buyblock__buttons.flex.items-center {
+  margin-right: 20px;
+} */
 .detailbuy__text {
   font-style: normal;
 font-weight: 600;
@@ -946,7 +954,7 @@ width: 100%;
 .detailbuy_out {
   max-width: 100%;
 
-  .productcard__addtocart {
+  .detailcard__addtocart {
     min-width: unset;
     width: 100%;
     white-space: nowrap;
