--- a/src/html/views/blog.html
+++ b/src/html/views/blog.html
@@ -69,8 +69,7 @@
                             <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
-                              <a class="youtubepopup" href="#!"
-                                data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
+                              <div class="youtubepopup">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img" style='background-image: url(img/video1.jpg);'>
                                   </div>
@@ -85,7 +84,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
 
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogs -->
@@ -98,8 +97,7 @@
                             <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
-                              <a class="youtubepopup" href="#!"
-                                data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
+                              <div class="youtubepopup">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img" style='background-image: url(img/video2.jpg);'>
                                   </div>
@@ -114,7 +112,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
 
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogs -->
@@ -125,8 +123,7 @@
                             <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
-                              <a class="youtubepopup" href="#!"
-                                data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
+                              <div class="youtubepopup">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img" style='background-image: url(img/video3.jpg);'>
                                   </div>
@@ -141,7 +138,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
 
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogs -->
@@ -154,10 +151,10 @@
                     <div class="blogslider__item">
                       <div class="blogcard blogcard_type2">
                         <div class="blogcard__item">
-                          <div class="blogcard__mask">
-                          </div>
+                          <a href="#" class="blogcard__mask">
+                          </a>
                           <div class="blogcard__content">
-                            <a class="" href="#">
+                            <div class="">
                               <div class="blogcard__image">
                                 <div class="blogcard__img"><img src="img/blog1.png" alt="">
                                 </div>
@@ -170,7 +167,7 @@
                                 </div><!-- /.blogcard__title -->
                               </div><!-- /.blogcard__info -->
 
-                            </a><!-- /.blogcard -->
+                            </div><!-- /.blogcard -->
                           </div><!-- /.blogs__content -->
                         </div>
                       </div><!-- /.blogcard blogcard_type2 -->
@@ -178,10 +175,10 @@
                     <div class="blogslider__item">
                       <div class="blogcard blogcard_type2">
                         <div class="blogcard__item">
-                          <div class="blogcard__mask">
-                          </div>
+                          <a href="#" class="blogcard__mask">
+                          </a>
                           <div class="blogcard__content">
-                            <a class="" href="#">
+                            <div class="">
                               <div class="blogcard__image">
                                 <div class="blogcard__img"><img src="img/blog2.png" alt="">
                                 </div>
@@ -194,7 +191,7 @@
                                 </div><!-- /.blogcard__title -->
                               </div><!-- /.blogcard__info -->
 
-                            </a><!-- /.blogcard -->
+                            </div><!-- /.blogcard -->
                           </div><!-- /.blogs__content -->
                         </div>
                       </div><!-- /.blogcard blogcard_type2 -->
@@ -202,10 +199,10 @@
                     <div class="blogslider__item">
                       <div class="blogcard blogcard_type2">
                         <div class="blogcard__item">
-                          <div class="blogcard__mask">
-                          </div>
+                          <a href="#" class="blogcard__mask">
+                          </a>
                           <div class="blogcard__content">
-                            <a class="" href="#">
+                            <div class="">
                               <div class="blogcard__image">
                                 <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                 </div>
@@ -218,7 +215,7 @@
                                 </div><!-- /.blogcard__title -->
                               </div><!-- /.blogcard__info -->
 
-                            </a><!-- /.blogcard -->
+                            </div><!-- /.blogcard -->
                           </div><!-- /.blogs__content -->
                         </div>
                       </div><!-- /.blogcard blogcard_type2 -->
@@ -236,8 +233,7 @@
                             <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
-                              <a class="youtubepopup" href="#!"
-                                data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
+                              <div class="youtubepopup">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img" style='background-image: url(img/video2.jpg);'>
                                   </div>
@@ -252,7 +248,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
 
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogs -->
@@ -263,8 +259,7 @@
                             <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
-                              <a class="youtubepopup" href="#!"
-                                data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
+                              <div class="youtubepopup">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img" style='background-image: url(img/video3.jpg);'>
                                   </div>
@@ -279,7 +274,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
 
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogs -->
@@ -292,8 +287,7 @@
                             <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
-                              <a class="youtubepopup" href="#!"
-                                data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
+                              <div class="youtubepopup">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img" style='background-image: url(img/video1.jpg);'>
                                   </div>
@@ -308,7 +302,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
 
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogs -->
