--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -497,7 +497,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
   
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogcard blogcard_type2 -->
@@ -521,7 +521,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
   
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogcard blogcard_type2 -->
@@ -545,32 +545,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
   
-                              </a><!-- /.blogcard -->
-                            </div><!-- /.blogs__content -->
-                          </div>
-                        </div><!-- /.blogcard blogcard_type2 -->
-                      </div><!-- /.blogslider__slide -->
-  
-                      <div class="blogslider__item">
-                        <div class="blogcard blogcard_type2">
-                          <div class="blogcard__item">
-                            <a href="#" class="blogcard__mask">
-                            </a>
-                            <div class="blogcard__content">
-                              <a class="" href="#">
-                                <div class="blogcard__image">
-                                  <div class="blogcard__img"><img src="img/blog3.png" alt="">
-                                  </div>
-                                </div>
-                                <div class="blogcard__info flex items-center">
-                                  <div class="blogcard__title">
-                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
-                                      Новинка: кальмар консервированный
-                                    </div>
-                                  </div><!-- /.blogcard__title -->
-                                </div><!-- /.blogcard__info -->
-  
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogcard blogcard_type2 -->
@@ -595,7 +570,7 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
   
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogcard blogcard_type2 -->
@@ -620,7 +595,32 @@
                                   </div><!-- /.blogcard__title -->
                                 </div><!-- /.blogcard__info -->
   
-                              </a><!-- /.blogcard -->
+                              </div><!-- /.blogcard -->
+                            </div><!-- /.blogs__content -->
+                          </div>
+                        </div><!-- /.blogcard blogcard_type2 -->
+                      </div><!-- /.blogslider__slide -->
+  
+                      <div class="blogslider__item">
+                        <div class="blogcard blogcard_type2">
+                          <div class="blogcard__item">
+                            <a href="#" class="blogcard__mask">
+                            </a>
+                            <div class="blogcard__content">
+                              <a class="" href="#">
+                                <div class="blogcard__image">
+                                  <div class="blogcard__img"><img src="img/blog3.png" alt="">
+                                  </div>
+                                </div>
+                                <div class="blogcard__info flex items-center">
+                                  <div class="blogcard__title">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
+                                      Новинка: кальмар консервированный
+                                    </div>
+                                  </div><!-- /.blogcard__title -->
+                                </div><!-- /.blogcard__info -->
+  
+                              </div><!-- /.blogcard -->
                             </div><!-- /.blogs__content -->
                           </div>
                         </div><!-- /.blogcard blogcard_type2 -->
