--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -377,7 +377,7 @@ img {
 }
 
 .cols_mainblock {
-  width: calc(100% - 285px);
+  width: calc(100% - 305px);
 }
 
 .mainmenubtn {
@@ -1066,7 +1066,8 @@ h2 {
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
-.productcard__prices {
+.productslider__slide  .productcard__prices {
+  display: block;
 }
 .productcard__topprice {
   margin-bottom: 4px;
@@ -2061,6 +2062,10 @@ li.mainmenuLevelOne__item {
 
     background: #f9f9f9;
   }
+
+  a:hover {
+    color: $orange;
+  }
 }
 .mainmenuLevelOne__link {
   display: -webkit-box;
@@ -2336,6 +2341,7 @@ li.mainmenuLevelOne__item {
   overflow: hidden;
   position: relative;
   padding: 17px 20px;
+  display: block;
 }
 .mainbanner__wrapper {
 }
@@ -2352,7 +2358,7 @@ li.mainmenuLevelOne__item {
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  color: rgba(83, 90, 103, 0.4);
+  color: rgba(83, 90, 103, 0.7);
 }
 .mainbanner__image {
   position: absolute;
@@ -2829,6 +2835,14 @@ button {
   color: #535a67;
   max-width: 395px;
   opacity: 0.4;
+  a {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-decoration: underline;
+    color: #535a67;
+  }
 }
 .subscribeblock__image {
   width: calc(100% - 625px);
@@ -3214,9 +3228,7 @@ input {
   background: #f9f9f9;
   border-radius: 15px;
 }
-.reviewsblock__nav {
-  display: none;
-}
+
 
 .breadcrumbs {
   margin-bottom: 29px;
@@ -5232,7 +5244,7 @@ margin-top: 13px;
   color: #3A3A3A;
   opacity: 1;
 }
-.formblock__text {
+.formblock__info {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -5249,6 +5261,30 @@ margin-top: 13px;
 .check label {
   a {
     color: rgba(83, 90, 103, 0.4);
+  }
+}
+.productcard__addtocart {
+  transition: all 0.3s ease;
+}
+.productcard__addtocart.active {
+  background-color: #70AC1F;
+  background-image: url(../img/selected_icon.svg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+
+}
+
+.seoblock__text p a {
+  font-weight: normal;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+#footer {
+  a:hover {
+    opacity: 0.7;
   }
 }
 
@@ -5436,6 +5472,25 @@ margin-top: 13px;
   .mainslide__wrapperMobile {
     background-image: none !important;
   }
+  .sitetitle__item:last-child {
+    MARGIN-TOP: 5px;
+  }
+  .mainmenubtn {
+    min-width: 285px;
+
+  }
+
+  .reviewsblock__nav {
+    display: flex;
+    margin: 40px 0;
+    justify-content: center;
+  }
+  .reviewsblock__all  {
+    padding-left: 31px;
+    padding-right: 45px;
+    margin-right: 20px;
+  }
+
 }
 
 @include medium-screen {
@@ -5655,12 +5710,15 @@ margin-top: 13px;
     z-index: 99999;
     background: #fff;
     top: 0;
+    display: block;
     width: 100%;
     height: 100vh;
     overflow-y: auto;
     padding: 10px 20px;
     min-width: 375px;
-    display: none;
+   /*  display: none; */
+   left: -100%;
+   transition: all 0.3s ease;
     .mobilemenu__header {
       display: flex;
       align-items: center;
@@ -5724,7 +5782,7 @@ margin-top: 13px;
     margin-right: 30px;
   }
   .mobilemenu.active {
-    display: block;
+    left: 0;
   }
 
   .mobilemenu__links {
@@ -5832,7 +5890,7 @@ margin-top: 13px;
   }
   .mainslide__wrapper {
     padding: 24px 30px;
-    background-image: none !important;
+    height: 500px;
     .btn_main {
       height: 60px;
       line-height: 60px;
@@ -5856,24 +5914,7 @@ margin-top: 13px;
     margin-bottom: 20px;
     max-width: calc(100% - 49px);
   }
-  .mainslide__wrapper {
-    height: initial;
-    background-color: #f9f9f9;
-    padding: 0;
-    border-radius: 15px;
-    overflow: hidden;
-  }
-  .mainslide__wrapperMobile {
-    height: 583px;
-    padding: 24px 30px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-    border-radius: 15px;
-    overflow: hidden;
 
-    align-items: flex-start;
-  }
   .mainslide__text {
     font-style: normal;
     font-weight: 400;
@@ -6456,6 +6497,7 @@ margin-top: 13px;
   }
   .cataloglist__item {
     max-width: 162px;
+    min-width:162px;
   }
   .cataloglist__item .productcard {
     min-width: unset;
@@ -7124,5 +7166,27 @@ line-height: 1.2;
     width: 100%;
     margin-bottom: 10px;
   }
+  .mainslide__wrapper {
+    height: initial;
+    background-color: #f9f9f9;
+    padding: 0;
+    border-radius: 15px;
+    overflow: hidden;
+  }
 
+  .mainslide__wrapper {
+    background-image: none !important;
+    
+  }
+  .mainslide__wrapperMobile {
+    height: 583px;
+    padding: 24px 30px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    border-radius: 15px;
+    overflow: hidden;
+
+    align-items: flex-start;
+  }
 }
