--- a/src/scss/partials/_classes.scss
+++ b/src/scss/partials/_classes.scss
@@ -60,6 +60,9 @@ margin-bottom: 100px;
 .text-left {
   text-align: left !important;
 }
+.items-end {
+  align-items: flex-end;
+}
 
 .text-center {
   text-align: center !important;
