--- a/src/html/views/delivery.html
+++ b/src/html/views/delivery.html
@@ -1,211 +1,209 @@
-<% var data = {
-  title: "MAIN",
-  author: ""
-  }; %><%= _.template(require('../includes/head.html').default)(data) %><%= _.template(require('../includes/header.html').default)(data) %> <main>
-  <div class="page">
-    <div class="breadcrumbs">
-      <div class="container">
-        <div class="breadcrumbs__items">
-          <ul>
-            <li>
-              <a href="/">
-                <span>
-                  <img src="img/Home.svg" alt="">
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <span>Каталог</span>
-              </a>
-            </li>
-            <li>
-              <span>Мясо, птица</span>
-            </li>
-          </ul>
-        </div>
-        <!-- /.breadcrumbs__items -->
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.breadcrumbs -->
-    <div class="container">
-      <div class="pageheader pageheader__type2">
-        <h1>Доставка и оплата</h1>
-      </div>
-      <div class="customblock customblock_flex">
-        <div class="customblock__left">
-          <div class="customblock__content">
-            <div class="customblock__title">
-              <h2>Условия доставки</h2>
+<% var data={ title: "MAIN" , author: "" }; %>
+  <%= _.template(require('../includes/head.html').default)(data) %>
+    <%= _.template(require('../includes/header.html').default)(data) %>
+      <main>
+
+        <div class="breadcrumbs">
+          <div class="container">
+            <div class="breadcrumbs__items">
+              <ul>
+                <li><a href="/"><span>Главная страница</span></a></li>
+                <li><span>Персональный раздел</span></li>
+              </ul>
             </div>
-            <!-- /.customblock__title -->
-            <div class="customblock__block">
-              <div class="customblock__subtitle">Минимальная сумма заказа 500 рублей!</div>
-              <div class="customblock__list listicon">
-                <ul>
-                  <li>Стоимость доставки – 249 рублей.</li>
-                  <li>При заказе от 2000 рублей БЕСПЛАТНО.</li>
-                  <li>При заказе от 500 рублей с доставкой по Одинцовскому г. о. БЕСПЛАТНО.</li>
-                </ul>
+            <!-- /.breadcrumbs__items -->
+          </div>
+          <!-- /.container -->
+        </div>
+        <!-- /.breadcrumbs -->
+        
+       <div class="pagebanner">
+        <div class="container">
+          <div class="pagebanner__wrapper" style='background-image: url(img/pagebannerbg.png);'>
+            <div class="pagebanner__content">
+              <div class="pagebanner__left">
+                <div class="pagebanner__main">
+                  <div class="pagebanner__title">
+                    Закажите <br> <span class="mark">на сумму от 2000 ₽</span> <br> и не платите за доставку!*
+                
+                  </div><!-- /.pagebanner__title -->
+                </div><!-- /.pagebanner__main -->
+              </div><!-- /.pagebanner__left -->
+              <div class="pagebanner__right">
+                <div class="pagebanner__image">
+                  <div class="pagebanner__img">
+                    <img src="img/pagebanner1.png" alt="">
+                  </div><!-- /.pagebanner__img -->
+                </div><!-- /.pagebanner__image -->
+              </div><!-- /.pagebanner__righ -->
+            </div><!-- /.pagebanner__content -->
+          </div><!-- /.pagebanner__wrapper -->
+        </div><!-- /.container -->
+       </div><!-- /.pagebanner -->
+
+
+      
+       <div class="pageblocksl">
+        <div class="container">
+          <div class="blockheader flex items-center content-between">
+            <div class="blockheader__left">
+              <h2>Условия платной доставки:</h2>
+            </div>
+          </div>
+          <div class="flex deliveryblock items-end">
+            <div class="blocklist">
+              <div class="blocklist__item">
+                <div class="blocklist__wrapper">
+                  <div class="blocklist__title">В пределах МКАД: <b>350 ₽</b> </div><!-- /.blocklist__title -->
+                  <div class="blocklist__text">минимальная сумма заказа <b>450 ₽</b>  <br>
+                    при заказе от <b>3 000 ₽ - бесплатно</b> </div><!-- /.blocklist__text -->
+                </div><!-- /.blocklist__wrapper -->
+              </div><!-- /.blocklist__item -->
+              <div class="blocklist__item">
+                <div class="blocklist__wrapper">
+                  <div class="blocklist__title">За МКАД от 5 до 20 км: <b>50 ₽/км </b> </div><!-- /.blocklist__title -->
+                  <div class="blocklist__text">минимальная сумма заказа  <b>3 000 ₽</b></div><!-- /.blocklist__text -->
+                </div><!-- /.blocklist__wrapper -->
+              </div><!-- /.blocklist__item -->
+              <div class="blocklist__item">
+                <div class="blocklist__wrapper">
+                  <div class="blocklist__title">За МКАД от 20 до 50 км: <b>50 ₽/км</b>  </div><!-- /.blocklist__title -->
+                  <div class="blocklist__text">минимальная сумма заказа <b>6 000 ₽</b> </div><!-- /.blocklist__text -->
+                </div><!-- /.blocklist__wrapper -->
+              </div><!-- /.blocklist__item -->
+            </div><!-- /.blocklist -->
+            <div class="image">
+              <img src="img/15-Vehicle-Mockup.png" alt="">
+            </div><!-- /.image -->
+          </div><!-- /.flex -->
+        </div>
+      </div>
+
+      <div class="pageblocksl ">
+        <div class="container">
+          <div class="blockheader">
+            <div class="blockheader__left">
+              <h2>Варианты оплаты заказа:</h2>
+            </div>
+           
+          </div>
+
+          <div class="fitchesblock">
+            <div class="fitchesblock__items">
+              <div class="fitchesblock__item slide-in-bottom wow" data-wow-delay="0.1s" data-wow-offset="0" data-wow-duration="1.5s" >
+                <div class="fitchesblock__wrapper">
+                  <div class="fitchesblock__header">
+                    <div class="fitchesblock__icon">
+                      <div class="fitchesblock__img"><img src="img/fitches_del_1.svg" alt=""></div>
+                      <!-- /.fitchesblock__img -->
+                    </div><!-- /.fitchesblock__icon -->
+                    <div class="fitchesblock__title">Картой или <br> наличными курьеру</div><!-- /.fitchesblock__title -->
+                  </div><!-- /.fitchesblock__header -->
+                  <div class="fitchesblock__main">
+                    <div class="fitchesblock__content">У наших курьеров есть терминалы оплаты и сдача</div><!-- /.fitchesblock__content -->
+                  </div><!-- /.fitchesblock__main -->
+                </div><!-- /.fitchesblock__wrapper -->
+              </div><!-- /.fitchesblock__item -->
+              <div class="fitchesblock__item slide-in-bottom wow" data-wow-delay="0.4s" data-wow-offset="0" data-wow-duration="1.5s">
+                <div class="fitchesblock__wrapper">
+                  <div class="fitchesblock__header">
+                    <div class="fitchesblock__icon">
+                      <div class="fitchesblock__img"><img src="img/fitches_del_2.svg" alt=""></div>
+                      <!-- /.fitchesblock__img -->
+                    </div><!-- /.fitchesblock__icon -->
+                    <div class="fitchesblock__title">По QR-коду через приложение банка</div><!-- /.fitchesblock__title -->
+                  </div><!-- /.fitchesblock__header -->
+                  <div class="fitchesblock__main">
+                    <div class="fitchesblock__content">Мгновенная оплата в приложении вашего банка в момент получения заказа от курьера</div><!-- /.fitchesblock__content -->
+                  </div><!-- /.fitchesblock__main -->
+                </div><!-- /.fitchesblock__wrapper -->
+              </div><!-- /.fitchesblock__item -->
+              <div class="fitchesblock__item slide-in-bottom wow" data-wow-delay="0.7s" data-wow-offset="0" data-wow-duration="1.5s" >
+                <div class="fitchesblock__wrapper">
+                  <div class="fitchesblock__header">
+                    <div class="fitchesblock__icon">
+                      <div class="fitchesblock__img"><img src="img/fitches_del_3.svg" alt=""></div>
+                      <!-- /.fitchesblock__img -->
+                    </div><!-- /.fitchesblock__icon -->
+                    <div class="fitchesblock__title">Картой при покупке онлайн на сайте</div><!-- /.fitchesblock__title -->
+                  </div><!-- /.fitchesblock__header -->
+                  <div class="fitchesblock__main">
+                    <div class="fitchesblock__content">Заморозим 1 рубль на карте,
+                      а итоговую сумму заказа спишем после завершения сборки</div><!-- /.fitchesblock__content -->
+                  </div><!-- /.fitchesblock__main -->
+                </div><!-- /.fitchesblock__wrapper -->
+              </div><!-- /.fitchesblock__item -->
+            </div><!-- /.fitchesblock__items -->
+          </div><!-- /.fitchesblock -->
+        </div>
+      </div>
+    
+     
+      <div class="pageblocksl">
+        <div class="container">
+          <div class="colsblock">
+          <div class="flex cols">
+            <div class="cols__col">
+              <div class="textinfo">
+                <h2>Условия возврата <br> денежных средств:</h2>
+                <p>Для возврата денег позвоните нам по телефону <a href="tel:+7 495 445 25 55">+7 495 445 25 55</a></p>
+                <p>Срок рассмотрения заявки на возврат денежных средств — 10 дней (срок устанавливается магазином). Деньги вернутся в течение 5-30 дней на ту карту, с которой была оплачена покупка. Точный срок зависит от банка, который обслуживает карту.</p>
               </div>
-              <!-- /.customblock__list -->
-            </div>
-            <!-- /.customblock__block -->
-            <div class="customblock__block">
-              <div class="customblock__subtitle">Доставка осуществляется ежедневно без выходных.</div>
-              <div class="customblock__list listicon">
-                <ul>
-                  <li>Заказ, сделанный до 21:00, доставим на следующий день.</li>
-                  <li>Заказ, оформленный после 21:00, привезем через день.</li>
-                  <li>Заказы с доставкой по Одинцовскому г. о., сделанные до 14:00, доставим в этот же день.</li>
-                  <li>Доставка по Москве возможна только на следующий день.</li>
-                </ul>
-              </div>
-              <!-- /.customblock__list -->
-            </div>
-            <!-- /.customblock__block -->
-            <div class="customblock__block">
-              <div class="customblock__subtitle">Интервалы доставки:</div>
-              <div class="pagebadge">
-                <div class="pagebadge__items">
-                  <div class="pagebadge__item">
-                    <span>с 13-00 до 16-00</span>
-                  </div>
-                  <div class="pagebadge__item">
-                    <span>с 16-00 до 19-00</span>
-                  </div>
-                  <div class="pagebadge__item">
-                    <span>с 19-00 до 22-00</span>
-                  </div>
-                </div>
-                <!-- /.pagebadge__items -->
-              </div>
-              <!-- /.pagebadge -->
-            </div>
-            <!-- /.customblock__block -->
-          </div>
-          <!-- /.customblock__content -->
+          
+            </div><!-- /.cols_col -->
+            <div class="cols__col">
+              <div class="grayblock textinfo">
+                <h3>Если вы обнаружили признаки некачественной продукции:</h3>
+                <ol class='listnumber'>
+                  <li>Сообщите нам об этом по номеру телефона: <a href="tel:+7 495 445 25 55">+7 495 445 25 55</a> </li>
+                  <li>Мы отправим к вам курьера для обмена продукции или возврата средств.</li>
+                
+                </ol>
+              </div><!-- /.grayblock -->
+            </div><!-- /.cols__col -->
+          </div><!-- /.flex cols -->
+        </div><!-- /.colsblock -->
+        </div><!-- /.container -->
+      </div><!-- /.pageblocksl -->
+
+
+      <div class="pageblocksl subscribeblock">
+        <div class="container">
+          <div class="subscribeblock__wrapper">
+            <div class="subscribeblock__container">
+              <div class="subscribeblock__items">
+                <div class="subscribeblock__content">
+                  <div class="subscribeblock__title">
+                    <span class="mark">Подпишитесь</span> на нашу рассылку <br> и узнавайте о новинках, акциях <br> и
+                    скидках
+                    первыми
+                  </div><!-- /.subscribeblock__title -->
+                  <div class="subscribeblock__form">
+                    <form action="">
+                      <div class="subscribeblock__row">
+                        <div class="subscribeblock__input">
+                          <input type="email" placeholder="Ваш e-mail">
+                        </div><!-- /.subscribeblock__input -->
+                        <div class="subscribeblock__button">
+                          <button type="submit" class="btn_main">Подписаться</button>
+                        </div><!-- /.subscribeblock__button -->
+                      </div><!-- /.subscribeblock__row -->
+                      <div class="subscribeblock__confirm">
+                        Нажимая на кнопку, вы соглашаетесь с условиями <a href="#">Политики конфиденциальности</a>
+                      </div><!-- /.subscribeblock__confirm -->
+                    </form>
+                  </div><!-- /.subscribeblock__form -->
+                </div><!-- /.subscribe__content -->
+                <div class="subscribeblock__image">
+                  <div class="subscribeblock__img">
+                    <img src="img/telefon.png" alt="">
+                  </div><!-- /.subscribeblock__img -->
+                </div><!-- /.subscribe__image -->
+              </div><!-- /.subscribe__items -->
+            </div><!-- /.subscribe__container -->
+          </div><!-- /.subscribe__wrapper -->
         </div>
-        <!-- /.customblock__left -->
-        <div class="customblock__right">
-          <div class="customblock__image">
-            <img src="img/delivery.png" alt="">
-          </div>
-        </div>
-        <!-- /.customblock__right -->
       </div>
-      <!-- /.customblock -->
-      <div class="customblock ">
-        <div class="customblock__content">
-          <div class="customblock__title">
-            <h2>Способы оплаты</h2>
-          </div>
-          <!-- /.customblock__title -->
-          <div class="pagecard">
-            <div class="pagecard__image">
-              <div class="pagecard__icon">
-                <img src="img/BankCards.svg" alt="">
-              </div>
-            </div>
-            <div class="pagecard__content">
-              <div class="pagecard__title">ONLINE на сайте</div>
-              <div class="pagecard__text">На данный момент на сайте возможен только один способ оплаты - оплата онлайн</div>
-              <!-- /.pagecard__text -->
-            </div>
-            <!-- /.pagecard__content -->
-          </div>
-          <!-- /.pagecard -->
-        </div>
-        <!-- /.customblock__content -->
-      </div>
-      <!-- /.customblock -->
-      <div class="customblock">
-        <div class="customblock__title">
-          <h2>Заказать через партнеров</h2>
-        </div>
-        <div class="partners__items">
-          <div class="partners__item">
-            <div class="partners__content">
-              <noindex>
-                <div class="partners__image">
-                  <a href="//www.ozon.ru/brand/myasnitskiy-ryad-137844783/" target="_blank" rel="nofollow">
-                    <img src="img/ozon.svg" alt="">
-                  </a>
-                </div>
-                <!-- /.partners__image -->
-              </noindex>
-            </div>
-            <!-- /.partners__content -->
-          </div>
-          <!-- /.partners__item -->
-          <div class="partners__item">
-            <div class="partners__content">
-              <noindex>
-                <div class="partners__image">
-                  <a href="//www.utkonos.ru/brands/mjasnickij-rjad" target="_blank" rel="nofollow">
-                    <img src="img/utkonos.svg" alt="">
-                  </a>
-                </div>
-                <!-- /.partners__image -->
-              </noindex>
-            </div>
-            <!-- /.partners__content -->
-          </div>
-          <!-- /.partners__item -->
-          <div class="partners__item">
-            <div class="partners__content">
-              <noindex>
-                <div class="partners__image">
-                  <a href="//www.komus.ru/trademarks/%D0%9C%D1%8F%D1%81%D0%BD%D0%B8%D1%86%D0%BA%D0%B8%D0%B9+%D1%80%D1%8F%D0%B4/t/9369/" target="_blank" rel="nofollow">
-                    <img src="img/komus.svg" alt="">
-                  </a>
-                </div>
-                <!-- /.partners__image -->
-              </noindex>
-            </div>
-            <!-- /.partners__content -->
-          </div>
-          <!-- /.partners__item -->
-          <div class="partners__item">
-            <div class="partners__content">
-              <noindex>
-                <div class="partners__image" style="height: 60px">
-                  <a href="https://sbermarket.ru/?utm_source=Partners&amp;utm_medium=referral&amp;utm_campaign=partners_standart_last-001&amp;is_retargeting=true&amp;shortlink=717aef7d&amp;c=partners_standart_last-001&amp;pid=Partners&amp;deep_link_value=sbermarket://&amp;af_click_lookback=7d&amp;af_adset=standart" target="_blank" rel="nofollow">
-                    <img src="img/sbermarket.gif" alt="">
-                  </a>
-                </div>
-              </noindex>
-            </div>
-          </div>
-          <div class="partners__item">
-            <div class="partners__content">
-              <noindex>
-                <div class="partners__image">
-                  <a href="//www.ozon.ru/brand/myasnitskiy-ryad-137844783/" target="_blank" rel="nofollow">
-                    <img src="img/ozon_fresh.jpg" alt="">
-                  </a>
-                </div>
-                <!-- /.partners__image -->
-              </noindex>
-            </div>
-            <!-- /.partners__content -->
-          </div>
-          <!-- /.partners__item -->
-          <!-- <div class="partners__item"><div class="partners__content"><div class="partners__image"><a href="#" target="_blank"><img src="img/perekrestok.svg" alt=""></a></div></div></div> -->
-        </div>
-        <!-- /.partners__items -->
-      </div>
-      <div class="customblock">
-        <div class="customblock__title">
-          <h2>Территория доставки</h2>
-        </div>
-        <!-- заглушка карты -->
-        <div class="deliverymap" id='delivery_map'>
-          <img src="img/map.jpg" alt="">
-        </div>
-        <!-- /.deliverumap -->
-      </div>
-    </div>
-  </div>
-</main><%= _.template(require('../includes/footer.html').default)(data) %>
+    
+      </main>
+      <%= _.template(require('../includes/footer.html').default)(data) %>
