--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1985,7 +1985,7 @@
                     </div><!-- /.reviewsblock__content -->
                   </div><!-- /.reviewsblock__answer -->
                 </div><!-- /.reviewsblock__item -->
-                <div class="reviewsblock__item ">
+                <div class="reviewsblock__item onlyDesktop">
                   <div class="reviewsblock__review">
                     <div class="reviewsblock__header">
                       <div class="reviewsblock__info">
@@ -2044,7 +2044,7 @@
                     </div><!-- /.reviewsblock__content -->
                   </div><!-- /.reviewsblock__answer -->
                 </div><!-- /.reviewsblock__item -->
-                <div class="reviewsblock__item ">
+                <div class="reviewsblock__item onlyDesktop">
                   <div class="reviewsblock__review">
                     <div class="reviewsblock__header">
                       <div class="reviewsblock__info">
@@ -2637,7 +2637,10 @@
               </div>
             </div>
             <div class="fitchesblock fitchesblock_type2">
-              <div class="fitchesblock__items">
+              <div class="fitchesblock__items limitheight">
+                <div class="limitheight__button">
+                    <span>Читать все</span>
+                </div><!-- /.limitheight -->
                 <div class="fitchesblock__item slide-in-bottom wow" data-wow-delay="0.1s" data-wow-offset="0" data-wow-duration="1.5s">
                   <div class="fitchesblock__wrapper">
                     <div class="fitchesblock__header">
