--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -484,7 +484,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog1.png" alt="">
                                   </div>
@@ -508,7 +508,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog2.png" alt="">
                                   </div>
@@ -532,7 +532,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="" >
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -557,7 +557,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -582,7 +582,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -607,7 +607,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
