--- a/src/html/views/product_opisanie.html
+++ b/src/html/views/product_opisanie.html
@@ -37,10 +37,10 @@
                       <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/product2.jpg" /></div>
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/product3.jpg" /></div>
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
                       <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
@@ -63,10 +63,10 @@
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="img/product2.jpg" />
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="img/product3.jpg" />
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
@@ -499,7 +499,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog1.png" alt="">
                                   </div>
@@ -523,7 +523,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog2.png" alt="">
                                   </div>
@@ -547,7 +547,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="" >
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -572,7 +572,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -597,7 +597,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -622,7 +622,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
