--- a/src/html/views/product_otzyv.html
+++ b/src/html/views/product_otzyv.html
@@ -37,10 +37,10 @@
                       <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/product2.jpg" /></div>
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/product3.jpg" /></div>
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
                       <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
@@ -63,10 +63,10 @@
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="img/product2.jpg" />
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="img/product3.jpg" />
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
@@ -500,7 +500,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog1.png" alt="">
                                   </div>
@@ -524,7 +524,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog2.png" alt="">
                                   </div>
@@ -548,7 +548,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="" >
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -573,7 +573,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -598,7 +598,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -623,7 +623,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
