--- a/src/html/views/product_type2.html
+++ b/src/html/views/product_type2.html
@@ -487,7 +487,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog1.png" alt="">
                                   </div>
@@ -511,7 +511,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog2.png" alt="">
                                   </div>
@@ -535,7 +535,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="" >
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -560,7 +560,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -585,7 +585,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
@@ -610,7 +610,7 @@
                             <a href="#" class="blogcard__mask">
                             </a>
                             <div class="blogcard__content">
-                              <a class="" href="#">
+                              <div class="">
                                 <div class="blogcard__image">
                                   <div class="blogcard__img"><img src="img/blog3.png" alt="">
                                   </div>
